--- a/src/components/User/userheadernav.module.css
+++ b/src/components/User/userheadernav.module.css
@@ -11,8 +11,8 @@
   height: 40px;
   width: 40px;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   border: 1px solid transparent;
   transition: 0.1s;
   cursor: pointer;
@@ -59,7 +59,7 @@
   height: 2px;
   border-radius: 2px;
   background: currentColor;
-  box-shadow: 0px 6px currentColor, 0 -6px currentColor;
+  box-shadow: 0 6px currentColor, 0 -6px currentColor;
   transition: 0.2s;
 }
 
@@ -73,8 +73,8 @@
   color: #fb1;
 }
 
-.mobileButtonActive::after {
-  transform: rotate(90deg);
+.mobileButtonActive:after {
+  transform: rotate(-90deg);
   width: 4px;
   height: 4px;
   box-shadow: 0 8px currentColor, 0 -8px currentColor;
@@ -84,13 +84,22 @@
   display: block;
   position: absolute;
   top: 70px;
-  height: 0px;
+  right: 0px;
   padding: 0 1rem;
   background: white;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 0.2rem;
   transform: translateX(-10px);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.navMobileActive {
+  transition: 0.3s;
+  transform: initial;
   opacity: 1;
+  pointer-events: initial;
+  z-index: 100;
 }
 
 .navMobile a,
@@ -103,6 +112,11 @@
   border-bottom: 1px solid #eee;
   padding: 0.5rem 0;
   cursor: pointer;
+}
+
+.navMobile a:hover svg > *,
+.navMobile button:hover svg > * {
+  fill: #fb1;
 }
 
 .navMobile button {
