--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -6,8 +6,8 @@
 }
 
 .login::before {
-  content: "";
   display: block;
+  content: "";
   background: url("../../Assets/login.jpg") no-repeat center center;
   background-size: cover;
 }
@@ -15,17 +15,16 @@
 .forms {
   max-width: 30rem;
   padding: 1rem;
+  margin-top: 20vh;
 }
 
 @media (max-width: 40rem) {
   .login {
     grid-template-columns: 1fr;
   }
-
   .login::before {
     display: none;
   }
-
   .forms {
     max-width: 100%;
   }
