--- a/src/components/Feed/FeedPhotosItem/feedphotositem.module.css
+++ b/src/components/Feed/FeedPhotosItem/feedphotositem.module.css
@@ -38,7 +38,7 @@
   content: "";
   display: inline-block;
   margin-right: 0.25rem;
-  background: url("../../Assets/visualizacao.svg") no-repeat center center;
+  background: url("../../../Assets/visualizacao.svg") no-repeat center center;
 }
 
 .photo:hover .visualizacao {
